# ShapeWars

./: CMakeCache.txt  CMakeConfigureLog.yaml  CMakeDirectoryInformation.cmake  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  Makefile.cmake  Makefile2  Menu.cpp  Menu.hpp  PowerUp.cpp  PowerUp.hpp  README.md  Shape.cpp  Shape.hpp  TargetDirectories.txt  Utils.cpp  Utils.hpp  cmake_install.cmake  main.cpp
